# frenc

./: Makefile  Makefile.am  configure.ac  enc12.h  frdec.c  frenc.c  frenc.h  lcp.h  main.c
